# epaper-img

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  meson.build
RaspberryPi_JetsonNano/c/: Makefile
examples/: EPD_4in2b_V2_test.c
lib/Config/: DEV_Config.c  DEV_Config.h  RPI_gpiod.c  dev_hardware_SPI.c  sysfs_gpio.c  sysfs_software_spi.c
lib/GUI/: GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/e-Paper/: EPD_10in2b.c  EPD_13in3b.c  EPD_13in3k.c  EPD_1in02d.c  EPD_1in54.c  EPD_1in54_DES.c  EPD_1in54_V2.c  EPD_1in54b.c  EPD_1in54b_V2.c  EPD_1in54c.c  EPD_1in64g.c  EPD_2in13.c  EPD_2in13_DES.c  EPD_2in13_V2.c  EPD_2in13_V3.c  EPD_2in13_V4.c  EPD_2in13b_V3.c  EPD_2in13b_V4.c  EPD_2in13bc.c  EPD_2in13d.c  EPD_2in13g.c  EPD_2in36g.c  EPD_2in66.c  EPD_2in66b.c  EPD_2in66g.c  EPD_2in7.c  EPD_2in7_V2.c  EPD_2in7b.c  EPD_2in7b_V2.c  EPD_2in9.c  EPD_2in9_DES.c  EPD_2in9_V2.c  EPD_2in9b_V3.c  EPD_2in9b_V4.c  EPD_2in9bc.c  EPD_2in9d.c  EPD_3in0g.c  EPD_3in52.c  EPD_3in7.c  EPD_4in01f.c  (+25 more)
src/: EPD_4in2b_V2_test.c  ImageData2.c  main.c
